--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,10 +23,11 @@ html {
 body {
   height: 100vh;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  background-color: #080808;
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
 }
